--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,8 +6,8 @@ NODE_ENV=development
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=sweets_db
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
+DB_USER=shradhesh
+DB_PASSWORD=Shradhu1234
 
 
 TEST_DB_NAME=sweets_db_test
