--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,8 +7,8 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci
+# Install dependencies (using npm install to handle lock file sync issues)
+RUN npm install
 
 # Copy source code
 COPY . .
